[package]
name = "screeps-timing"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scopeguard = { version = "1.0" }
screeps-game-api = { path = "C:\\Source\\screeps-game-api" }
serde = { version = "1.0.104", features = ["serde_derive"] }
serde_json = "1.0"